@startuml
skinparam classAttributeIconSize 0
interface Estado
class Base
class Modificado

interface Estado {
    {abstract}+modificarPuntuacionpuntuacion : PuntuacionTirada): void
    {abstract}+puntosBase(puntuacionValor : int): int
}

class Base{
    +modificarPuntuacion(puntuacion : PuntuacionTirada): void
    +puntosBase(puntuacionValor : int): int
}

class Modificado{
    -int puntosBase
    {abstract}+numeracion() : int
    {abstract}+compararCon(unValor : Valor) : boolean
}

Estado --> Base
Estado --> Modificado
@enduml